Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9514 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -430,6 +430,7 @@ PlayerStatsExperience.minXPpts=Мин. поена
 PlayerStatsExperience.maxXPpts=Макс. поена
 PlayerStatsExperience.sum=Укупно
 PlayerStatsExperience.Experience=Тренутни ниво искуства
+PlayerStatsExperience.PerformanceHistory=Историјат наступа
 PlayerStatsExperience.InternationalPercentage=Међ. пријатељске у %:
 
 PlayerStatsExperience.matchFriendly=Пријатељски мечеви
