--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -16,6 +16,7 @@
 <item>● НОВО: <module>YouthTwins</module>: Приказује број могућих близанаца на страници са играчима омладинског тима (само за супортере у сарадњи са 'hattrick youthclub')</item>
 <item>● <module>MatchOrderInterface</module>: Опција за искључивање означавања и приказивање информација за мечеве на турнирима</item>
 <item>● <module>MatchOrderInterface</module>: Исправљена грешка због које се у Фајерфоксу нису коректно приказивали играчи који су играли на претходном мечу</item>
+<item>● <module>MatchOrderInterface</module>: Уклоњена опција за означавање играча који су играли на претходном мечу на захтев ХТ особља :( (ХТ уводи своју верзију означавања само за супортере)</item>
 <item>● <module>PlayerStatsExperience</module>: Исправљена грешка за играче који су добили црвени картон код којих су ови мечеви детектовани као да су завршени службеним резултатом</item>
 <item>● <module>PlayerStatsExperience</module>: Исправљена грешка због које модул није радио на Фајерфоксу 3.6</item>
 </note>
