Russian translation update to r9526
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9527 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,6 +1,6 @@
 #used by translators to keep track. not used with foxtrick atm
 properties.language=Russian
-properties.version=r9457
+properties.version=r9526
 properties.translators=_KOHb_ [teamId=28914]
 
 # Hints:
@@ -396,6 +396,7 @@ module.RatingsDisplay.HatStats.desc=Как в HatStats
 module.RatingsDisplay.HTSums.desc=Как сумму рейтингов Hattrick-а
 module.SafeForWork.desc=Заменяет значок и заголовок вкладки Hattrick на выглядящие менее подозрительно. Убедитесь, что Вы также запретили все другие модули, могущие вызвать подозрение, особенно модули категории "Alert".
 module.PlayerStatsExperience.desc=Показывать подуровень опыта на странице статистики игрока
+module.PlayerStatsExperience.AlwaysShowAll.desc=Показывать по умолчанию так много матчей как возможно при нажатии на ссылку на странице игрока или на странице истории выступлений
 module.YouthTwins.desc=Показывать количество возможных близнецов для игроков юношеской команды (в сотрудничестве с hattrick youthclub). Для использования этого модуля иметь аккаунт на hattrick youthclub не обязательно. Т.к. для определения близнецов необходимо знать лица игроков, эта возможность может быть использована только подписчиками Hattrick supporter.
 # -----------------------------------------------------------------------------
 
@@ -420,6 +421,28 @@ PlayerStatsExperience.NoSkillUpFound=Действительное значени
 PlayerStatsExperience.ExperienceChange.title=Приобретённый опыт
 PlayerStatsExperience.ExperienceChange.title.abbr=Оп+
 PlayerStatsExperience.Walkover=Команде засчитано техническое поражение, вследствие этого игроки не получили какого-либо опыта.
+
+
+PlayerStatsExperience.MatchesSinceSkilup=Матчей после последнего повышения опыта
+PlayerStatsExperience.matches=Матчи
+PlayerStatsExperience.minutes=Минуты
+PlayerStatsExperience.minXPpts=Мин. опыта
+PlayerStatsExperience.maxXPpts=Макс. опыта
+PlayerStatsExperience.sum=Сумма
+PlayerStatsExperience.Experience=Опыт
+PlayerStatsExperience.PerformanceHistory=История выступлений
+PlayerStatsExperience.InternationalPercentage=Международные товарищеские матчи в %:
+
+PlayerStatsExperience.matchFriendly=Тов. матчи
+PlayerStatsExperience.matchInternationalFriendly=Международные
+PlayerStatsExperience.matchNationalFriendly=Национальные
+PlayerStatsExperience.matchCup=Кубок
+PlayerStatsExperience.matchQualification=Квалификация
+PlayerStatsExperience.matchLeague=Лига
+PlayerStatsExperience.matchNtFriendly=Тов. матчи сборной
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=Чемпионат мира
+PlayerStatsExperience.matchNtFinals=Чемпионат мира, (полу-) финал
 
 #Series statistics
 rating.average=Средний рейтинг
@@ -510,7 +533,7 @@ LeagueNewsFilter.lineupChanges=Изменения расстановки
 #team pages
 sidebarBox.actions=Действия
 TeamSelectBox.selectplayer=Выберите игрока
-ExtendedPlayerDetails.perseason=в сезон
+ExtendedPlayerDetails.perseason= в сезон
 ExtraPlayerInfo.defensiveTrainer=Тренер, предпочитающий игру от обороны. Уровень тренерского навыка - %s.
 ExtraPlayerInfo.offensiveTrainer=Тренер, предпочитающий атакующий стиль. Уровень тренерского навыка - %s.
 ExtraPlayerInfo.balancedTrainer=Тренер, предпочитающий баланс между атакой и обороной. Уровень тренерского навыка - %s.
