*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9529 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.translators=Utvecklare
 
 # Hints:
 # translate the right side of the = sign.
@@ -166,6 +167,7 @@ module.TeamStats.Personality.desc=Personlighet
 module.TeamStats.Status.desc=Status (kort/skador)
 module.TeamStats.Attributes.desc=Egenskaper
 module.TeamStats.Skills.desc=Förmågor
+module.TeamStats.Match.desc=Match
 module.TeamStats.Current_league.desc=Nuvarande liga
 module.ExtraPlayerInfo.desc=Visa extra info om spelare på spelaröversikten.
 module.ExtraPlayerInfo.CoachInfo.desc=Lägger till tränartypen (off/def/norm) direkt på tränare på spelaröversikten. Gäller både nuvarande och tidigare tränare.
@@ -282,6 +284,7 @@ module.TeamPopupLinks.LastLineup.desc=Länk till senaste uppställningen
 module.TeamPopupLinks.NextMatch.desc=Länk till nästa match
 module.TeamPopupLinks.AddNextMatch.desc=Lägger till nästa match i HT-Live
 module.TeamPopupLinks.YouthMatches.desc=Länk till juniormatcher
+module.TeamPopupLinks.Tournaments.desc=Turneringar
 module.TeamPopupLinks.Coach.desc=Länk till coachen
 module.SkillColoring.desc=Bättre visualisering av förmågor
 module.SkillColoring.skill_color.desc=Färglagda förmågor
@@ -360,6 +363,7 @@ module.MatchOrderInterface.PlayedLastMatch.desc=Markerar spelare som spelat i se
 module.MatchOrderInterface.Specialties.desc=Visa spelares specialiteter
 module.MatchOrderInterface.StayOnPage.desc=Stanna kvar på matchordersidan efter sparad match
 module.MatchOrderInterface.SwapPositions.desc=Lägg till en länk för att skifta plats på spelare (vänster/höger)
+module.MatchSimulator.HTMSPrediction.desc=Lägg till HTMS förutsägelse
 module.RatingsDisplay.HatStats.desc=Som HatStats
 # -----------------------------------------------------------------------------
 
@@ -367,10 +371,16 @@ module.RatingsDisplay.HatStats.desc=Som HatStats
 # IN-GAME STRINGS. translate first
 
 #Loyalty display
+LoyaltyDisplay.motherClubBonus=(Moderklubbsbonus)
+LoyaltyDisplay.loyaltyBonus=(Klubbkänsla)
 
 #Youth-Twins
+YouthTwins.markedTwins=Märkt som tvilling\: %1
+YouthTwins.nonTwins=Märkt som icke-tvilling\: %1
+YouthTwins.undecidedTwins=Ännu inte märkt\: %1
 
 #PlayerStatsExperience
+PlayerStatsExperience.NotAllMatchesVisible=Det verkliga värdet kan vara högre eftersom inte alla matcher visas.
 
 #Series statistics
 
@@ -407,6 +417,9 @@ TeamStats.boxheader=Lagöversikt
 TeamStats.General=Generell
 TeamStats.Attributes=Egenskaper
 TeamStats.Skills=Förmågor
+TeamStats.Total=Total
+TeamStats.Selected=Vald
+TeamStats.Average=Medel
 TeamStats.PlayerNotToOld=Spelare < 19 år
 TeamStats.PlayerToOld=Spelare >\= 19 år
 TeamStats.Cards=Kort
@@ -493,11 +506,14 @@ ForumPreview.send=Skicka
 #ForumYouthIcons
 ForumYouthIcons.toolbar.main=Huvudlänkar
 ForumYouthIcons.toolbar.youth=Juniorlänkar
+ForumYouthIcons.toolbar.tournament=Turneringar
 ForumYouthIcons.toolbar.other=Mer
 ForumYouthIcons.youthplayerid=Infoga länk till juniorspelare
 ForumYouthIcons.youthteamid=Infoga länk till juniorlag
 ForumYouthIcons.youthmatchid=Infoga länk till juniormatch
 ForumYouthIcons.youthseries=Infoga länk till juniorserie
+ForumYouthIcons.tournamentid=Infoga länk till turnering.
+ForumYouthIcons.tournamentmatchid=Infoga länk till turneringsmatch.
 ForumYouthIcons.debug=Infoga FoxTrick debug log (felsökningslogg).
 ForumYouthIcons.settings=Infoga Foxtricks inställningar.
 ForumSpecialBBCode.q=Lägg till citat
@@ -557,7 +573,16 @@ matchOrder.previousPrediction=Tidigare prognos
 matchOrder.AddMatchManually=Lägg till en match manuellt
 matchOrder.swapPositions=Skifta positioner
 matchOrder.options=Alternativ
+matchOrder.attVsDef=Anfall vs. Försvar
 matchOrder.summary=Sammanfattning
+matchOrder.tournamentMatch=Turnering
+matchOrder.homeAway.abbr=H/B
+matchOrder.default=Standard
+matchOrder.default.abbr=S
+matchOrder.home=Hemma
+matchOrder.home.abbr=H
+matchOrder.away=Borta
+matchOrder.away.abbr=B
 
 #Skills
 Playmaking=Spelupplägg
@@ -859,6 +884,7 @@ NextMatch=Nästa match
 AddNextMatch=Lägg till match i HT-Live
 LastLineup=Senaste uppställning
 YouthMatches=Juniormatcher
+Tournaments=Turneringar
 more=mera...
 less=mindre...
 
@@ -883,6 +909,8 @@ RapidId.view=View
 RapidId.viewById=Visa efter ID
 RapidId.senior=Senior
 RapidId.youth=Junior
+RapidId.tournaments=Turneringar
+RapidId.tournament=Turnering
 
 # HTMSPrediction
 HTMSPrediction.prediction=Förutspått resultat
@@ -1027,6 +1055,7 @@ TeamPopupLinks.OpenNewTab=Öppna i ny flik
 
 #toolbar
 toolbar.title=FoxTrick
+toolbar.featureHighlight=Markera funktioner
 status.active=aktiv
 status.enabled=aktiverad, men ej aktiv på %s
 status.disabled=inaktiverad
@@ -1103,6 +1132,7 @@ link.recentChanges=Senaste ändringarna
 
 releaseNotes.show=Visa versionsinformationen efter FoxTrick uppdateringar
 releaseNotes.showFor=Visa versionsinformationen för\:
+releaseNotes.version=Version\:
 
 about.copyright=Copyright
 about.maintainers=Ansvariga
