*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9536 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -1019,11 +1019,11 @@ ticker.type.transfer=Info de tranfert
 ticker.type.challenge=Défi
 ticker.type.guestbook=Livre d'or
 ticker.type.mail=HT-Mail
-ticker.type.myht=Mes messages de Hattrick
+ticker.type.myht=Mon message de coup de chapeau
 ticker.type.others=Autres
 
 # LocalTime
-LocalTime.hattrick=Heure d'Hattrick
+LocalTime.hattrick=Temps de coup de chapeau
 LocalTime.hattrick.title=Heure d'Hattrick. Cliquez sur l'horloge pour passer à l'heure locale.
 LocalTime.local=Heure locale
 LocalTime.local.title=Heure du fuseau horaire local. Cliquez sur l'horloge pour passer à l'heure d'Hattrick.
