--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -380,6 +380,7 @@ module.MatchOrderInterface.PlayedLastMatch.desc=Evidenzia giocatori che hanno gi
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Evidenziato anche sul campo
 module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Disabilita per le partite del torneo
 module.MatchOrderInterface.Specialties.desc=Mostra le specialità del giocatore
+module.MatchOrderInterface.ShowFaces.desc=Mostra le facce dei giocatori invece delle magliette per le formazioni passate e future
 module.MatchOrderInterface.StayOnPage.desc=Rimani nella pagina degli ordini della partita dopo aver inviato la formazione
 module.MatchOrderInterface.SwapPositions.desc=Aggiungi un link per scambiare i giocatori da destra a sinistra e viceversa
 module.MatchSimulator.desc=Aggiunge un simulatore della partita alla pagina per gli ordini della partita. 
