htlang.xml : fixed entry in vi
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9556 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/vi/htlang.xml
+++ b/content/locale/vi/htlang.xml
@@ -11,7 +11,7 @@
 	<!-- tactics appearing in match detail page -->
 	<tactics>
 		<tactic type="normal" value="Bình thường" />
-		<tactic type="pressing" value="Pressing" />
+		<tactic type="pressing" value="Kèm chặt" />
 		<tactic type="ca" value="Phòng thủ phản công" />
 		<tactic type="aow" value="Tấn công cánh" />
 		<tactic type="aim" value="Tấn công trung lộ" />
