*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9561 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -167,6 +167,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Eigene Farben für das 
 module.MatchReportFormat.desc=Formatierung des Spielberichts in einzelne Abschnitte. Einstellungen zum Format können untenstehend vorgenommen werden.
 module.MatchReportFormat.ShowEventIcons.desc=Ereignisspezifische Symbole hinzufügen
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Andere Färbung für das eigene Team
+module.LiveMatchReportFormat.desc=Anzeige der HT-Live und HT-Re-Live Spielberichte um eventspezifische Symbole und Informationen erweitern.
 module.ForumRedirManagerToTeam.desc=Weiterleitung auf die Vereinsseite von den Managerlinks im Forum
 module.ManagerButtons.desc=Hinzufügen oder verändern der Managerbuttons auf Team- und Managerseiten
 module.ManagerButtons.GuestBook.desc=Hinzufügen von Links 'Gästebuch' auf der Manager-Seite und der Vereinsseite
