--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -380,6 +380,7 @@ module.MatchOrderInterface.PlayedLastMatch.desc=Resalta a los jugadores que han 
 module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=También resaltar dentro del campo
 module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Deshabilitar para partidos de torneos
 module.MatchOrderInterface.Specialties.desc=Mostrar la especialidad de los jugadores
+module.MatchOrderInterface.ShowFaces.desc=Mostrar la cara del jugador en lugar de la playera para alineaciones antiguas y futuras
 module.MatchOrderInterface.StayOnPage.desc=Permanacer en la página de instrucciones luego de guardar
 module.MatchOrderInterface.SwapPositions.desc=Añade un enlace para intercambiar jugadores de izquierda a derecha
 module.MatchSimulator.desc=Añade un simulador de partidos a la inerfaz de instrucciones
