Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9583 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -397,6 +397,8 @@ module.SafeForWork.desc=Замењује фавикон и Хеттрик нас
 module.PlayerStatsExperience.desc=Приказује и подниво искуства за играча на страници Историје наступа
 module.PlayerStatsExperience.AlwaysShowAll.desc=Прикажи што је више могуће мечева на страници Историје наступа играча.
 module.YouthTwins.desc=Приказује број могућих близанаца у сарадњи са 'hattrick youthclub' алатом. Није потребно да имате отворен налог на 'hattrick youthclub' да би сте користили овај модул. Пошто су елементи слике играча најважнији за детекцију близанаца ова опција је употребљива само за Хеттрик супортере.
+#accessability
+module.ARIALandmarks.desc=Додај АРИА маркере свим секцијама на сајту како би учинио лакшим навигацију помоћу аутоматском читача текста (нпр. за слепе особе)
 # ----------------------------------------------------------------------------
 
 
