--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -13,7 +13,16 @@
 <item>자세한 내용은 Google Code의 <xhtml:a href="http://code.google.com/p/foxtrick/source/list">보고 기록</xhtml:a>을 참조하세요.</item>
 </note>
 
+<note version="0.9.4">
+<item></item>
+<item><xhtml:b>시각 또는 청각 장애우분들을 위해</xhtml:b></item>
+<item>우리는 설정 페이지에 접근성과 관련된 모든 모듈을 포함할 영역을 추가하였습니다.</item>
+<item>● NEW: <module>ARIALandmarks</module>: 웹사이트에 ARIA landmarks를 추가하였습니다. 이것은 스크린 리더를 사용하여 사이트를 탐색하는데 도움이 됩니다. 두 가지 주요 탐색 바와 구독하는 모든 토론장은 "탐색"이 있습니다. 메인 콘텐츠는 "메인"역할을 가집니다. 모든 추가적인 정보와 링크를 포함하는 사이드 바는 "보충"으로 표시될 것입니다. 전체 검색과 포럼 검색을 "검색" 이 있습니다.</item>
+<item>더 좋은 제안이 있으시면 주저하지 말고 저희에게 연락 주시기 바랍니다. Hattrick Access 토론장에 남겨주셔도 됩니다.</item>
+</note>
+
 <note version="0.9.3">
+<item>● 굉장한 폭스트릭 유저분들 덕분에 수많은 언어 업데이트를 하였습니다. 정말 감사드립니다. <xhtml:a href="http://www.crowdin.net/project/foxtrick">http://www.crowdin.net</xhtml:a>에서 계속 협력해주세요. </item>
 <item>● NEW: <module>YouthTwins</module>: 서포터즈 유저를 위해 유소년 선수 개요 페이지에 (가능성 있는/쌍둥이/비쌍둥이) 선수 수를 표시합니다. (hattrick youthclub과 연계)</item>
 <item>● <module>MatchOrderInterface</module>: 라인업 페이지에서 각 선수의 유니폼 대신에 얼굴을 표시하는 옵션을 추가하였습니다.(기본 활성화)</item>
 <item>● <module>MatchOrderInterface</module>: 최근 경기 정보를 비활성화시키는 옵션과 토너먼트 게임을 회색 표시하는 옵션을 추가하였습니다.(기본 활성화)</item>
