Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9602 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -414,6 +414,7 @@ YouthTwins.markedTwins=Број потенцијалних близанаца к
 YouthTwins.nonTwins=Број потенцијалних близанаца који су означени као "није близанац"!: %1
 YouthTwins.undecidedTwins=Број потенцијалних близанаца који нису означени ни као да јесу близанци, нити као да нису близанци.: %1
 YouthTwins.nonHyUser=Можете сазнати више о потенцијалу овог играча уколико користите 'hattrick youthclub'.
+YouthTwins.infoText=Шта су близанци и каву корист можете имати од њих?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Играч је од последњег скока искуства сакупио између %1 и %2 од могућих 28 поена. Тренутно његов ниво искуства је између %3 и %4.
