--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -397,12 +397,21 @@ module.SafeForWork.desc=Замењује фавикон и Хеттрик нас
 module.PlayerStatsExperience.desc=Приказује и подниво искуства за играча на страници Историје наступа
 module.PlayerStatsExperience.AlwaysShowAll.desc=Прикажи што је више могуће мечева на страници Историје наступа играча.
 module.YouthTwins.desc=Приказује број могућих близанаца у сарадњи са 'hattrick youthclub' алатом. Није потребно да имате отворен налог на 'hattrick youthclub' да би сте користили овај модул. Пошто су елементи слике играча најважнији за детекцију близанаца ова опција је употребљива само за Хеттрик супортере.
+module.YouthTwins.HideInfoLink.desc=Искључи линк за објашњење појма 'близанац'
 #accessability
 module.ARIALandmarks.desc=Додај АРИА маркере свим секцијама на сајту како би учинио лакшим навигацију помоћу аутоматском читача текста (нпр. за слепе особе)
+
+module.TransferHistoryFilters.desc=Филтер опције на страници клупске историје трансфера
 # ----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#transfer-history-filters
+TransferHistoryFilters.all=Сви
+TransferHistoryFilters.sold=Продати
+TransferHistoryFilters.bought=Купљени
+TransferHistoryFilters.filter=Филтер:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Бонус за матични клуб)
@@ -1169,6 +1178,7 @@ tab.alert=Обавештења
 tab.about=О Фокстрику
 tab.changes=Промене
 tab.help=Помоћ
+tab.accessibility=Доступност
 
 prefs.setup=Подешавања
 prefs.setup.desc=Ово су подешавања која је Фокстрик аутоматски препознао. Уколико нису исправна, {пријавите овде}.
