*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9656 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -167,6 +167,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Colorare separata a juc
 module.MatchReportFormat.desc=Prezentare a raportului de meci linie dupa linie in functie de raport
 module.MatchReportFormat.ShowEventIcons.desc=Adauga pictograme specifice eventurilor.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Colorare separata a propriei echipei
+module.LiveMatchReportFormat.desc=Prezentarea raportului HT-Live și HT Re-Live linie după linie pentru a potrivi eventurile de meci cu iconițe specifice eventurilor.
 module.ForumRedirManagerToTeam.desc=Redirectioneaza link-ul de la pagina managerului la pagina echipei in forumuri
 module.ManagerButtons.desc=Adauga sau schimba butoanele managerului pe pagina managerului si a echipei
 module.ManagerButtons.GuestBook.desc=Adauga butoanele 'Scrie in cartea de oaspeti' pe pagina managerului si pagina echipei
@@ -376,7 +377,10 @@ module.SupporterStatsEnhancements.desc=Evidentiaza jucatorii actuali in statisti
 module.MobileEnhancements.desc=Set de imbunatatiri pentru mobile
 module.MatchOrderInterface.desc=Setari pe interfata de ordine meci. 
 module.MatchOrderInterface.PlayedLastMatch.desc=Evidentiaza jucatorii care au jucat in ultimul meci si arata ultima pozitie si timpul jucat in casuta cu detali
+module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Evidențiază, de asemenea, pe teren
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Dezactivează pentru meciurile din turnee
 module.MatchOrderInterface.Specialties.desc=Arata specialitatile jucatorilor
+module.MatchOrderInterface.ShowFaces.desc=Arată fețele jucătorilor în loc de tricourile de joc pentru formațiile de joc aliniate în trecut sau în viitor
 module.MatchOrderInterface.StayOnPage.desc=Ramai in pagina de ordine meci dupa salvare
 module.MatchOrderInterface.SwapPositions.desc=Adauga un link pentru a schimba jucatorii de la stanga la dreapta
 module.MatchSimulator.desc=Adauga un simulator de meci la pagina ordine meci.
@@ -415,6 +419,7 @@ PlayerStatsExperience.NotAllMatchesVisible=Valoarea actuală ar putea fi mai mar
 PlayerStatsExperience.NoSkillUpFound=Valorea actuală ar putea fi mai mare deoarece nu a fost înregistrată nici o creștere de experiență.
 PlayerStatsExperience.ExperienceChange.title=Câștig experiență
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
+PlayerStatsExperience.Walkover=Acest joc a fost forfait. Astfel jucătorii nu au primit experiență.
 
 #Series statistics
 rating.average=Rating mediu
