Serbian release notes update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9658 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -6,10 +6,22 @@
      instead of <a>. -->
 <!-- For each note, keep the attribute "version" unchanged, and you could
      translate the "localized-version" attribute. -->
-
+а
 <notes xmlns:xhtml="http://www.w3.org/1999/xhtml">
 <note version="nightly" localized-version="Тест верзија">
 <item>За детаље о променама погледајте  на <xhtml:a href="http://code.google.com/p/foxtrick/source/list">Google Code</xhtml:a> сајту.</item>
+</note>
+
+<note version="0.9.4">
+<item>● НОВО:  <module>TransferHistoryFilters</module>: Омогућава филтрирање купљених или продатих играча на страници клупске Историје трансфера</item>
+<item>● <module>PlayerStatsExperience</module>: Нова верзија са више детаља. (Хвала SeanConnery (7751762) за тестирање комбинације боја за особе које не препознају основну нијансу црвене и зелене)</item>
+<item>● Мање измене у изгледу</item>
+<item>● <module>YouthTwins</module>: Опција за скривање линка ка објашњењу појма 'близанац'</item>
+<item>● <module>StaffMarker</module>: Од сада користимо Google Code за листу Hattrick Youthclub особља како би смањили оптерећење њиховог сервера</item>
+<item></item>
+<item><xhtml:b>За слепе и особе са оштећеним слухом</xhtml:b></item>
+<item>Додали смо нову секцију подешавањима која ће у себи сдржати све модуле који имају везе са лакшим приступом садржају Хеттрик сајта.</item>
+<item>● НОВО: <module>ARIALandmarks</module>: Додаје ARIA маркере на Хеттерик вебсајт. Уз помоћ ових маркера је олаккшана навигација за особе које користе програме за ишчитавање страница.</item>
 </note>
 
 <note version="0.9.3">
