--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -378,6 +378,8 @@ module.MobileEnhancements.desc=Побољшања за мобилне телеф
 module.MatchOrderInterface.desc=Мења интерфејс за издавање налога. Сенчи играче који су већ играли на тренинг позицијама у текућој недељи и приказује разлику између предвиђених оцена.
 module.MatchOrderInterface.GotTrainingOnField.desc=Додатно означи и у постави за меч, играче који су већ играли на тренинг позицијама у текућој недељи(само за супортере)
 module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Прикажи информације о последњем мечу у прозору са детаљима о играчу
+module.MatchOrderInterface.CloneOrder.desc=Додај линк за клонирање налога
+module.MatchOrderInterface.AutoExpandCloned.desc=Аутоматски отвори клонирани налог
 module.MatchOrderInterface.Specialties.desc=Прикажи специјалност играча
 module.MatchOrderInterface.ShowFaces.desc=Прикажи слике играча уместо дресова у меч налозима и извештајима са мечева
 module.MatchOrderInterface.StayOnPage.desc=Остани на страници са налозима када сачуваш поставу
@@ -669,6 +671,8 @@ matchOrder.home=Домаћин
 matchOrder.home.abbr=Д
 matchOrder.away=Гост
 matchOrder.away.abbr=Г
+matchOrder.cloneOrder=Клонирај овај налог
+matchOrder.cloneOrder.abbr=К
 
 #Skills
 Playmaking=Плејмејкинг
