Serbian Translation update (typos)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9683 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -378,7 +378,7 @@ module.MobileEnhancements.desc=Побољшања за мобилне телеф
 module.MatchOrderInterface.desc=Мења интерфејс за издавање налога. Сенчи играче који су већ играли на тренинг позицијама у текућој недељи и приказује разлику између предвиђених оцена.
 module.MatchOrderInterface.GotTrainingOnField.desc=Додатно означи и у постави за меч, играче који су већ играли на тренинг позицијама у текућој недељи(само за супортере)
 module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Прикажи информације о последњем мечу у прозору са детаљима о играчу
-module.MatchOrderInterface.CloneOrder.desc=Додај линк за клонирање налога
+module.MatchOrderInterface.CloneOrder.desc=Додај линк за клонирање индивидуалних налога за играче
 module.MatchOrderInterface.AutoExpandCloned.desc=Аутоматски отвори клонирани налог
 module.MatchOrderInterface.Specialties.desc=Прикажи специјалност играча
 module.MatchOrderInterface.ShowFaces.desc=Прикажи слике играча уместо дресова у меч налозима и извештајима са мечева
@@ -671,7 +671,7 @@ matchOrder.home=Домаћин
 matchOrder.home.abbr=Д
 matchOrder.away=Гост
 matchOrder.away.abbr=Г
-matchOrder.cloneOrder=Клонирај овај налог
+matchOrder.cloneOrder=Клонирај овај индивидуални налог
 matchOrder.cloneOrder.abbr=К
 
 #Skills
