--- a/content/locale/es-CR/htlang.xml
+++ b/content/locale/es-CR/htlang.xml
@@ -2,10 +2,10 @@
 
 	<!-- rating sublevels appearing in match detail page. copy "text" -->
 	<ratingSubLevels>
-		<sublevel text="(Muy bajo)" value="0.0" />
-		<sublevel text="(Bajo)" value="0.25" />
-		<sublevel text="(Alto)" value="0.50" />
-		<sublevel text="(Muy alto)" value="0.75" />
+		<sublevel text="(muy bajo)" value="0.0" />
+		<sublevel text="(bajo)" value="0.25" />
+		<sublevel text="(alto)" value="0.50" />
+		<sublevel text="(muy alto)" value="0.75" />
 	</ratingSubLevels>
 
 	<!-- tactics appearing in match detail page. copy "value" -->
