*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9709 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -620,7 +620,23 @@ Last_stars_decline=Last brown stars
 #following string uses pluralForms
 Last_match_played_as_at=Played %1 min as %2 in his last match on the %3.
 Last_match_didnot_play=Has not played yet.
+Flag=Flag
+Flag.abbr=Flag
+Player=Player
+Player.abbr=Player
+Age=Age
+Age.abbr=Age
+Match=Match
+Series=Series
 TransferCompare=Transfer Compare
+Bookmark=Bookmark
+Deadline=Deadline
+Deadline.abbr=Deadline
+CurrentBid=Current bid
+CurrentBid.abbr=Bid
+CurrentBidder=Current highest bidder
+CurrentBidder.abbr=Bidder
+CurrentBidderShort=Current highest bidder
 
 skilltable.youthplayer=Youthplayer
 skilltable.rebought_youthplayer=rebought youth player
@@ -726,6 +742,10 @@ flagCollectionToMap.SAmerica=South America
 flagCollectionToMap.World=World
 
 # TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Hide bruised
+TransferSearchResultFilters.hideInjured=Hide injured
+TransferSearchResultFilters.hideSuspended=Hide suspended
+TransferSearchResultFilters.days=Days\:
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=View
@@ -736,30 +756,61 @@ RapidId.tournaments=Tournaments
 RapidId.tournament=Tournament
 
 # HTMSPrediction
+HTMSPrediction.prediction=Predicted result
+HTMSPrediction.winDrawLoss=win/draw/lose
+HTMSPrediction.title=Match Analysis by HTMS
+HTMSPrediction.changePrediction=Change prediction
+HTMSPrediction.team=Team
 
 #htms table of statistical truth
+truthTable.name=Team
+truthTable.real_points=Real points
 truthTable.notAvailableYet=Data not available yet. Go to HTMS to create the needed data
 
 # HTMSPoints
+HTMSPoints=HTMS Points\:
 
 # CrossTable
+CrossTable.graph=Season graph
+CrossTable.table=Cross table
 # will be shown as "R13" denoting round 13
 CrossTable.noMatches=No matches have been played yet.
 
 # MyMonitor
+MyMonitor.header=My Monitor
 #following string uses pluralForms
 MyMonitor.teams=%s team in monitor;%s teams in monitor
+MyMonitor.add=Watch this team
+MyMonitor.remove=Remove this team from my watch list
 MyMonitor.addHelp=Go to the team that you want to monitor, and you will see a box on the sidebar to add that team.
+MyMonitor.removeTeam=Select a team to remove\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.type.senior=Senior
+MyMonitor.type.youth=Youth
+MyMonitor.type.nt=National
 MyMonitor.htLive=HT Live
 
 # tickers
+ticker.type.welcome=Welcome message
+ticker.type.forum=Forum replies
+ticker.type.transfer=Transfer info
+ticker.type.challenge=Challenge
+ticker.type.guestbook=Guestbook
+ticker.type.mail=HT-Mail
+ticker.type.myht=My Hat-trick message
+ticker.type.others=Others
 
 # LocalTime
+LocalTime.hattrick=Hat-trick time
+LocalTime.hattrick.title=Time in Hat-trick time zone. Click the clock to switch to local time.
+LocalTime.local=Local time
+LocalTime.local.title=Time in local time zone. Click the clock to switch to Hat-trick time.
 
 # fennec ui
 pageAction.rightMenu=Show right menu
+pageAction.mainContent=Show main content
 pageAction.leftMenu=Show left menu
+pageAction.all=Show all
 
 
 #Locales for date and time
@@ -798,6 +849,8 @@ specialPaste.hint=Paste with Shift + Left Click.
 
 # -----------------------------------------------------------------------------
 # option function strings
+TickerAlert.enable=Enable
+TickerAlert.sound=Sound
 
 #toolbar
 toolbar.title=FoxTrick
